[Nav Experiment] Don't trigger URL rewriter on placeholder URL.

This fixes a DCHECK in browser_about_rewriter.cc because it is triggered
on about:blank?for=chrome://newtab in all egtests with
SlimNavigationManager enabled. Although this is not the root cause, it
is still more correct to skip URL rewriting altogether on placeholder
URLs than reverting the rewrite.

Bug: 902097
Change-Id: I50b0848f0589f24398fb01a8c625b899ab8336f7
Reviewed-on: https://chromium-review.googlesource.com/c/1318790
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: Danyao Wang <danyao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605546}
Former-commit-id: bce15ee8327451d125431b5756fd1d6e440223f4